  "system" command to allow the user to define named systems
- Add univariate kernel density estimation (under the Variable
  menu in the gui program -- no script counterpart)
- Purge the lesser-used model selection statistics, and use
  the original formulae for AIC and Schwarz's BIC
- Improve feel of data editing spreadsheet, gtk2 version
- Add groupwise heteroskasticity test for panel data
- Extend handling of missing observations in panel context,
  including case of unbalanced panels (to some degree)
- Fix for appending observations (built-in spreadsheet): plotting
  vars were not being automatically extended
- Fix for deleting variables: don't show the "variables have been
  renumbered" message if the only vars to be renumbered are
  hidden ones
- Fix newly introduced bug in time-series graphs: don't show two y 
  axes if only one is actually used
- Fix for johansen cointegration test: don't crash if the user
  puts the const into the list of variables
- Fix bug in forecasts with standard errors, for case of missing
  observations
- Fix bug in reading of CSV files: crash if variable names were not
  found, but observation markers were found
- Add new option under Sample menu, "Transpose data" (for data that
  were read in "sideways" from, e.g., a CSV file
- Fix bug in ADF p-values for locales which do not use '.' as
  the decimal point

11/15/2004 version 1.3.0
- add "append" command, to append data to the current dataset,
  as in the gui File/Append data
- add KPSS stationarity test ("kpss" command, Jack Lucchetti)
- fix bug: data importers were accepting duplicate names for
  variables
- XLS importer: handle string formulas; fix handling of large
  string tables (SST and CONTINUE records)
- fix bug: error in printing of model selection statistics for
  very large or small values on Windows
- fix bug in running scripts from the gretl console: file was 
  not closed when an error was encountered
- fix bug in Prais-Winsten estimator